[package]
name = "mvtime"
version = "0.1.0"
edition = "2021"
description = "Multiverse CLI time tracker"

[dependencies]
clap = "3.1"
directories = "4.0"
tui = {version="0.17", features=["serde"]}
crossterm = "0.22"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "*"
eyre = "0.6.6"
simple-eyre = "0.3"

