[package]
name = "mvtime"
version = "0.1.0"
edition = "2021"
description = "Multiverse CLI time tracker"

[dependencies]
clap = "3.2"
directories = "4.0"
tui = {version="0.19", features=["serde"]}
crossterm = "0.25"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
eyre = "0.6"
simple-eyre = "0.3"
notify = "5.0"
